# terminal-pet

./: README.md  pyproject.toml  terminal-pet-tutorial.md
docs/: index.html  script.js  styles.css
terminal_pet/: __init__.py  art.py  cli.py  hooks.py  pet.py
