[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-pet"
version = "0.1.0"
description = "A virtual pet that lives in your terminal and reacts to your git commits"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
pet = "terminal_pet.cli:main"

[tool.setuptools]
packages = ["terminal_pet"]
